<resources>
    <string name="label_home">首页</string>
    <string name="label_setting">设置</string>
    <string name="label_login">登录</string>
    <string name="label_task">工单</string>
    <string name="label_logout">注销</string>
    <string name="label_save">保存</string>
    <string name="label_manually_fetch">手工获取推送信息</string>
    <string name="label_account">账号</string>
    <string name="label_password">密码</string>
    <string name="label_build_date">编译日期</string>
    <string name="label_build_revision">编译版本</string>
    <string name="label_self_phone">本机号码</string>
    <string name="label_debug_url">接口地址</string>
    <string name="label_export_wx">导出微信数据库</string>
    <string name="label_task_code">工单编号</string>
    <string name="label_project">项目</string>
    <string name="label_representative">专员</string>
    <string name="label_doctor_name">医生姓名</string>
    <string name="label_doctor_no">医生编号</string>
    <string name="label_hospital">医院</string>
    <string name="label_department">科室</string>
    <string name="label_location">所在地</string>
    <string name="content_splash_version" formatted="false">%s (%d) %s</string>
    <string name="info_saved">保存成功</string>
    <string name="info_no_phone_number">没有可拨打的电话号码</string>
    <string name="info_sound_record_uploaded" formatted="false">和号码%s通话的录音文件%s已经成功上传</string>
    <string name="info_sound_record_upload_failed" formatted="false">上传通话录音文件失败！ 号码：%s， 文件：%s</string>
    <string name="hint_enter_account">请输入账号&#8230;</string>
    <string name="hint_enter_password">请输入密码&#8230;</string>
    <string name="hint_self_phone">请输入本机手机号码&#8230;</string>
    <string name="hint_debug_url">请输入数据接口地址头&#8230;</string>
    <string name="warn_requires_root">请先root手机并授予本应用root权限</string>
    <string name="warn_requires_phone_record">请确认已打开手机自动录音功能</string>
    <string name="warn_need_self_phone_number">请在设置界面输入本机号码</string>
    <string name="warn_requires_permission">请在权限管理中授予本应用所有所需权限</string>
    <string name="warn_missing_account_password">请输入账号或密码</string>
    <string name="warn_no_cached_dial_message">没有待处理的拨号请求</string>
    <string name="error_business" formatted="false">%s</string>
    <string name="error_coded" formatted="false">发生错误：%s</string>
    <string name="error_unauthroized">尚未登录系统或者登录已经过期</string>
    <string name="error_forbidden">没有操作所需权限</string>
    <string name="error_http">服务端返回错误</string>
    <string name="error_network">发生网络错误</string>
    <string name="error_api">访问数据发生错误</string>
</resources>
