<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="MMVerStyle"
    >
    <LinearLayout
        style="@style/EluStyle.InfoLine"
        android:id="@+id/dialing_task_code_area"
        >
        <TextView
            style="@style/EluStyle.TextTitle"
            android:layout_gravity="start"
            android:text="@string/label_task_code"
            />
        <TextView
            style="@style/EluStyle.Text"
            android:id="@+id/dialing_task_code_value"
            android:layout_gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/EluStyle.InfoLine"
        android:id="@+id/dialing_doctor_name_area"
        >
        <TextView
            style="@style/EluStyle.TextTitle"
            android:layout_gravity="start"
            android:text="@string/label_doctor_name"
            />
        <TextView
            style="@style/EluStyle.Text"
            android:id="@+id/dialing_doctor_name_value"
            android:layout_gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/EluStyle.InfoLine"
        android:id="@+id/dialing_doctor_no_area"
        >
        <TextView
            style="@style/EluStyle.TextTitle"
            android:layout_gravity="start"
            android:text="@string/label_doctor_no"
            />
        <TextView
            style="@style/EluStyle.Text"
            android:id="@+id/dialing_doctor_no_value"
            android:layout_gravity="end"
            />
    </LinearLayout>
</LinearLayout>